@@ -187,13 +187,13 @@ svnant.jar.dir=${basedir}/../externals/svnant-jars
         <property name="PY_RELEASE_LEVEL_SNAPSHOT" value="170"/> <!-- 0xAA -->
 
         <!-- The current version info -->
-        <property name="jython.version" value="2.5rc3+"/>
-        <property name="jython.version.noplus" value="2.5rc3"/>
+        <property name="jython.version" value="2.5rc4+"/>
+        <property name="jython.version.noplus" value="2.5rc4"/>
         <property name="jython.major_version" value="2"/>
         <property name="jython.minor_version" value="5"/>
         <property name="jython.micro_version" value="0"/>
         <property name="jython.release_level" value="${PY_RELEASE_LEVEL_GAMMA}"/>
-        <property name="jython.release_serial" value="3"/>
+        <property name="jython.release_serial" value="4"/>
 
         <condition property="do.snapshot.build">
             <isset property="snapshot.revision" />
